# AviSynth-vsTCanny

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
msvc/: vsTCanny.sln  vsTCanny.vcxproj  vsTCanny.vcxproj.filters
src/: vsTCanny.cpp  vsTCanny.h  vsTCanny.rc  vsTCanny_AVX2.cpp  vsTCanny_AVX512.cpp  vsTCanny_SSE2.cpp
